feat: add S3 Assets bucket and DynamoDB KV stores for Cloudflare bindings replacement
Add AWS infrastructure to replace Cloudflare Workers bindings:

1. S3 Bucket (ASSETS replacement):
   - Bucket: lornu-ai-assets-{account-id}
   - Versioning enabled for rollback
   - Server-side encryption
   - CORS configured for frontend access
   - Lifecycle management for old versions
   - Public access blocked (CloudFront serves)

2. DynamoDB Tables:
   - lornu-ai-rate-limit-kv: For rate limiting (RATE_LIMIT_KV)
   - lornu-ai-general-kv: For caching and sessions
   - Both use PAY_PER_REQUEST billing
   - TTL enabled for automatic cleanup
   - IRSA for Kubernetes pod authentication

3. Kubernetes Configuration:
   - Deployment env vars for S3 and DynamoDB tables
   - ConfigMap for assets and rate limiting settings
   - IAM role for app service account

Environment variables available to backend:
- S3_ASSETS_BUCKET, S3_ASSETS_REGION, S3_ASSETS_PREFIX
- DYNAMODB_RATE_LIMIT_TABLE, RATE_LIMIT_ENABLED
- DYNAMODB_GENERAL_KV_TABLE, CACHE_TTL_SECONDS

Replaces Cloudflare bindings:
- ASSETS (S3) → lornu-ai-assets-{account-id}
- RATE_LIMIT_KV (DynamoDB) → lornu-ai-rate-limit-kv

--- a/kubernetes/base/deployment.yaml
+++ b/kubernetes/base/deployment.yaml
@@ -34,6 +34,14 @@ spec:
           value: "0.0.0.0"
         - name: PYTHONPATH
           value: "/app"
+        - name: AWS_REGION
+          value: "us-east-1"
+        - name: S3_ASSETS_BUCKET
+          value: "lornu-ai-assets-${AWS_ACCOUNT_ID}"
+        - name: DYNAMODB_RATE_LIMIT_TABLE
+          value: "lornu-ai-rate-limit-kv"
+        - name: DYNAMODB_GENERAL_KV_TABLE
+          value: "lornu-ai-general-kv"
         envFrom:
         - configMapRef:
             name: lornu-ai-config
