--- a/k8s/base/configmap.yaml
+++ b/k8s/base/configmap.yaml
@@ -5,3 +5,9 @@ metadata:
 data:
   environment: "base"
   contact-email: ""
+  # GCP Storage bucket for static assets (equivalent to Cloudflare R2 "Assets")
+  GCS_ASSETS_BUCKET: "gcp-lornu-ai-assets"
+  # Firestore for rate limiting (equivalent to Cloudflare KV "RATE_LIMIT_KV")
+  FIRESTORE_RATE_LIMIT_COLLECTION: "rate_limits"
+  # GCP Project ID
+  GCP_PROJECT_ID: "gcp-lornu-ai"
