fix(PR #295): address critical and high-priority code review issues from Gemini
Critical Fixes:
1. REMOVED: Secret manifest files from git (dev, staging, prod)
   - Security risk: Never commit secrets, even with placeholders
   - Use: External Secrets Operator (ESO) to sync from AWS Secrets Manager
   - GitHub Actions already handles secret injection via kustomize-deploy.yml

2. FIXED: cert-manager deployment AWS_ROLE_ARN placeholder
   - Changed from hardcoded ACCOUNT_ID to dynamic annotation reference
   - Uses: metadata.annotations['iam.amazonaws.com/role'] from IRSA
   - Now works with IRSA-provisioned role

3. FIXED: cert-manager webhook liveness probe port
   - Changed /livez port 6080 to /healthz (correct metric port)
   - Prevents CrashLoopBackOff from failed probes

4. FIXED: letsencrypt-staging ClusterIssuer environment label
   - Changed lornu.ai/environment from production → staging
   - Proper labeling for staging resources

5. ENABLED: DynamoDB deletion protection
   - rate_limit_kv: deletion_protection = true
   - general_kv: deletion_protection = true
   - Prevents accidental data loss in production

6. REMOVED: Redundant ingress-patch.yaml
   - Patching logic already defined inline in kustomization.yaml
   - Reduces code duplication and confusion

7. UPDATED: Kustomization files
   - Removed secret.yaml references (not needed, ESO handles it)
   - Kept cert-manager and assets-kv-config resources

Updated Files:
- kubernetes/overlays/dev/secrets.yaml (DELETED)
- kubernetes/overlays/staging/secrets.yaml (DELETED)
- kubernetes/overlays/prod/secrets.yaml (DELETED)
- kubernetes/overlays/prod/ingress-patch.yaml (DELETED)
- kubernetes/overlays/prod/cert-manager/deployment.yaml
- kubernetes/overlays/prod/cert-manager/clusterissuer.yaml
- kubernetes/overlays/prod/kustomization.yaml
- kubernetes/overlays/staging/kustomization.yaml
- kubernetes/overlays/dev/kustomization.yaml
- terraform/aws/production/dynamodb.tf

Security & Best Practices:
- Secrets managed 

--- a/kubernetes/overlays/prod/cert-manager/clusterissuer.yaml
+++ b/kubernetes/overlays/prod/cert-manager/clusterissuer.yaml
@@ -35,7 +35,7 @@ metadata:
   namespace: cert-manager
   labels:
     app.kubernetes.io/name: cert-manager
-    lornu.ai/environment: production
+    lornu.ai/environment: staging
     lornu.ai/managed-by: terraform-cloud
 spec:
   acme:
