--- a/k8s/base/cert-manager/clusterissuer-staging.yaml
+++ b/k8s/base/cert-manager/clusterissuer-staging.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   acme:
     server: https://acme-staging-v02.api.letsencrypt.org/directory
-    email: admin@lornu.ai
+    email: principle@lornu.ai
     privateKeySecretRef:
       name: letsencrypt-staging-key
     solvers:
