--- a/.github/workflows/kustomize-deploy.yml
+++ b/.github/workflows/kustomize-deploy.yml
@@ -31,6 +31,15 @@ jobs:
         run: |
           aws eks update-kubeconfig --name lornu-ai-production-cluster --region ${{ secrets.AWS_DEFAULT_REGION }}
 
+      - name: "Write ACM env"
+        if: ${{ matrix.env == 'staging' || matrix.env == 'prod' }}
+        run: |
+          if [ "${{ matrix.env }}" = "staging" ]; then
+            echo "ACM_CERTIFICATE_ARN=${{ secrets.STAGING_ACM_CERTIFICATE_ARN }}" > kubernetes/overlays/staging/acm.env
+          else
+            echo "ACM_CERTIFICATE_ARN=${{ secrets.PROD_ACM_CERTIFICATE_ARN }}" > kubernetes/overlays/prod/acm.env
+          fi
+
       - name: "Deploy to Namespace"
         run: |
           kubectl kustomize kubernetes/overlays/${{ matrix.env }} | kubectl apply -f -
