fix(api): add missing dependencies
- python-multipart (required for FastAPI form/upload support)
- google-cloud-storage & firestore (for GCP integration)
- resend (for email)

--- a/packages/api/pyproject.toml
+++ b/packages/api/pyproject.toml
@@ -10,4 +10,8 @@ dependencies = [
     "vtracer>=0.6.11",
     "rembg>=2.0.50",
     "pillow>=10.0.0",
+    "python-multipart>=0.0.9",
+    "google-cloud-storage>=2.14.0",
+    "google-cloud-firestore>=2.14.0",
+    "resend>=0.8.0",
 ]
