fix(ci): skip kustomize deploy on PRs

--- a/.github/workflows/kustomize-deploy.yml
+++ b/.github/workflows/kustomize-deploy.yml
@@ -15,6 +15,7 @@ jobs:
   deploy:
     name: "Deploy"
     runs-on: ubuntu-latest
+    if: github.event_name != 'pull_request'
     strategy:
       matrix:
         env: [dev, staging, prod]
