--- a/.github/workflows/terraform-aws.yml
+++ b/.github/workflows/terraform-aws.yml
@@ -194,6 +194,7 @@ jobs:
       TF_VAR_docker_image: ${{ needs.build.outputs.image-uri }}
       TF_VAR_resource_prefix: ${{ secrets.PROD_RESOURCE_PREFIX }}
       TF_VAR_github_repo: ${{ secrets.PROD_GITHUB_REPO }}
+      TF_VAR_github_actions_role_arn: ${{ secrets.AWS_ACTIONS_PROD_ROLE_ARN }}
 
     steps:
       - name: "Checkout"
