--- a/kubernetes/overlays/prod/assets-kv-config.yaml
+++ b/kubernetes/overlays/prod/assets-kv-config.yaml
@@ -7,6 +7,7 @@ metadata:
     app.kubernetes.io/name: lornu-ai
     lornu.ai/environment: production
     lornu.ai/managed-by: terraform-cloud
+    lornu.ai/asset-id: lornu-ai-final-clear-bg
 data:
   # S3 Assets bucket configuration
   S3_ASSETS_BUCKET: "lornu-ai-assets-ACCOUNT_ID"
