--- a/k8s/base/configmap.yaml
+++ b/k8s/base/configmap.yaml
@@ -3,8 +3,8 @@ kind: ConfigMap
 metadata:
   name: lornu-ai-config
 data:
-  environment: "base"
-  contact-email: ""
+  ENVIRONMENT: "base"
+  CONTACT_EMAIL: "contact@lornu.ai"
   # GCP Storage bucket for static assets (equivalent to Cloudflare R2 "Assets")
   GCS_ASSETS_BUCKET: "gcp-lornu-ai-assets"
   # Firestore for rate limiting (equivalent to Cloudflare KV "RATE_LIMIT_KV")
