chore: unify k8s to kubernetes, standardize overlays, and fix python package structure

--- a/.github/workflows/terraform-aws-prod.yml
+++ b/.github/workflows/terraform-aws-prod.yml
@@ -140,7 +140,7 @@ jobs:
 
       - name: Deploy to EKS with Kustomize
         run: |
-          kustomize build k8s/overlays/production | \
+          kustomize build kubernetes/overlays/lornu-prod | \
           kubectl set image deployment/production-lornu-ai \
             lornu-ai=${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:${{ github.sha }} \
             --filename - | \
