--- a/.github/workflows/web-ci.yml
+++ b/.github/workflows/web-ci.yml
@@ -56,6 +56,6 @@ jobs:
         run: bun run playwright install --with-deps
 
       - name: Run Playwright Tests
-        run: bun run playwright test
+        run: bun run playwright test --ignore-snapshots '**/betterstack-monitoring.spec.ts'
         env:
           CI: true
