feat: decommission Cloudflare artifacts and finalize K8s-native architecture (issue #332)
- Remove wrangler.toml, worker.ts, and Cloudflare CLI references from gitignore
- Update .cursorrules and copilot-instructions.md with strict Cloudflare ban
- Remove Cloudflare references from web app (Home.tsx, Security.tsx, Privacy.tsx, CONTACT_FORM_SETUP.md)
- Update apps/web/README.md to reflect Kubernetes-native deployment
- Remove legacy docs/CLOUDFLARE_WORKERS.md
- Update test scripts to use environment variables instead of Wrangler
- Add Route53 DNS configuration for staging (terraform/aws/staging/route53.tf)
- Fix Kubernetes overlay protective metadata and TLS configuration
- Remove redundant kubernetes/overlays/production/ directory
- Update GitHub Actions workflows for multi-domain SAN certificate support
- Add ACM certificate configuration maps for dev/staging/prod overlays

--- a/.github/workflows/terraform-aws-prod.yml
+++ b/.github/workflows/terraform-aws-prod.yml
@@ -60,6 +60,21 @@ jobs:
       - name: Terraform Init
         run: terraform -chdir=terraform/aws/production init
 
+      - name: Set extra domain aliases for SAN certificate
+        run: |
+          domains=()
+          if [ -n "${{ secrets.STAGE_DOMAIN }}" ]; then
+            domains+=("${{ secrets.STAGE_DOMAIN }}")
+          fi
+          
+          # Convert array to JSON string
+          if [ ${#domains[@]} -gt 0 ]; then
+            json_domains=$(printf '%s\n' "${domains[@]}" | jq -R . | jq -s .)
+            echo "TF_VAR_extra_domain_names=$json_domains" >> "$GITHUB_ENV"
+          else
+            echo "TF_VAR_extra_domain_names=[]" >> "$GITHUB_ENV"
+          fi
+
       - name: Terraform Plan
         env:
           TF_VAR_secrets_manager_arn_pattern: ${{ secrets.SECRETS_MANAGER_ARN_PATTERN }}
@@ -109,6 +124,21 @@ jobs:
 
       - name: Terraform Init
         run: terraform -chdir=terraform/aws/production init
+
+      - name: Set extra domain aliases for SAN certificate
+        run: |
+          domains=()
+          if [ -n "${{ secrets.STAGE_DOMAIN }}" ]; then
+            domains+=("${{ secrets.STAGE_DOMAIN }}")
+          fi
+          
+          # Convert array to JSON string
+          if [ ${#domains[@]} -gt 0 ]; then
+            json_domains=$(printf '%s\n' "${domains[@]}" | jq -R . | jq -s .)
+            echo "TF_VAR_extra_domain_names=$json_domains" >> "$GITHUB_ENV"
+          else
+            echo "TF_VAR_extra_domain_names=[]" >> "$GITHUB_ENV"
+          fi
 
       - name: Terraform Apply
         env:
