--- a/.github/workflows/terraform-aws-stage1-acm.yml
+++ b/.github/workflows/terraform-aws-stage1-acm.yml
@@ -65,15 +65,28 @@ jobs:
       - name: Terraform Init
         run: terraform -chdir=terraform/aws/production init
 
-      - name: Set extra domain aliases
+      - name: Set extra domain aliases for SAN certificate
         run: |
+          domains=()
           if [ -n "${{ secrets.STAGE_DOMAIN }}" ]; then
-            echo "TF_VAR_extra_domain_names=[\"${{ secrets.STAGE_DOMAIN }}\"]" >> "$GITHUB_ENV"
+            domains+=("${{ secrets.STAGE_DOMAIN }}")
+          fi
+          if [ -n "${{ secrets.PROD_DOMAIN }}" ]; then
+            # Add PROD_DOMAIN if not already present
+            if [[ ! " ${domains[@]} " =~ "${{ secrets.PROD_DOMAIN }}" ]]; then
+              domains+=("${{ secrets.PROD_DOMAIN }}")
+            fi
+          fi
+          
+          # Convert array to JSON string
+          if [ ${#domains[@]} -gt 0 ]; then
+            json_domains=$(printf '%s\n' "${domains[@]}" | jq -R . | jq -s .)
+            echo "TF_VAR_extra_domain_names=$json_domains" >> "$GITHUB_ENV"
           else
             echo "TF_VAR_extra_domain_names=[]" >> "$GITHUB_ENV"
           fi
 
-      - name: Terraform Plan (ACM)
+      - name: Terraform Plan (ACM with SAN)
         if: inputs.action == 'plan'
         env:
           TF_VAR_docker_image: "placeholder"
@@ -91,7 +104,7 @@ jobs:
             -target=aws_route53_record.cloudfront_cert_validation \
             -target=aws_acm_certificate_validation.cloudfront
 
-      - name: Terraform Apply (ACM)
+      - name: Terraform Apply (ACM with SAN)
         if: inputs.action == 'apply'
         env:
           TF_VAR_docker_image: "placeholder"
