--- a/.gitignore
+++ b/.gitignore
@@ -101,8 +101,16 @@ logs
 *.sln
 *.sw?
 
-# Cloudflare Workers (use lornu-ai-dev fork for Cloudflare development)
-wrangler.toml
-apps/web/worker.ts
-.wrangler/
-.dev.vars
+# Build outputs
+dist/
+dist-worker/
+
+# Dependencies
+node_modules/
+.next/
+.venv/
+__pycache__/
+
+# Environment
+.env.local
+.env.*.local
