fix: address code review comments - align with project standards
## Critical Fixes
- Remove conflicting eks-auth.tf (resolves access_entries vs aws-auth ConfigMap conflict)
  - access_entries in eks.tf is the modern preferred way to manage EKS access
  - Removing kubernetes_config_map resource eliminates unpredictable behavior

## High-Priority Fixes
- Fix protective metadata labels in prod overlay
  - Changed lornu.ai/managed-by from 'plan-a-orchestration' to 'terraform-cloud'
  - Changed lornu.ai/asset-id from 'lornu-ai-production-app' to 'lornu-ai-final-clear-bg'
  - Switched to commonLabels format for consistency with project standards (.ai/RULES.md)

## Medium-Priority Fixes
- Standardize dev overlay labels
  - Changed lornu.ai/env to lornu.ai/environment
  - Added lornu.ai/managed-by: terraform-cloud
  - Added lornu.ai/asset-id: lornu-ai-final-clear-bg
  - Use commonLabels format for consistency

- Standardize staging overlay labels
  - Changed lornu.ai/env to lornu.ai/environment
  - Added lornu.ai/managed-by: terraform-cloud
  - Added lornu.ai/asset-id: lornu-ai-final-clear-bg
  - Use commonLabels format for consistency

- Parameterize prod Ingress TLS hosts
  - Replaced hardcoded lornu.ai/api.lornu.ai with ${PROD_DOMAIN_NAME}/${PROD_API_DOMAIN_NAME}
  - Prevents accidental production deployment with wrong domains

All changes align with .ai/RULES.md and .ai/ARCHITECTURE.md documentation.

--- a/kubernetes/overlays/staging/kustomization.yaml
+++ b/kubernetes/overlays/staging/kustomization.yaml
@@ -7,12 +7,10 @@ resources:
 
 namespace: lornu-staging
 
-labels:
-- pairs:
-    lornu.ai/environment: staging
-    lornu.ai/managed-by: terraform-cloud
-    lornu.ai/asset-id: lornu-ai-final-clear-bg
-  includeSelectors: true
+commonLabels:
+  lornu.ai/environment: staging
+  lornu.ai/managed-by: terraform-cloud
+  lornu.ai/asset-id: lornu-ai-final-clear-bg
 
 patches:
 - target:
