--- a/kubernetes/overlays/prod/kustomization.yaml
+++ b/kubernetes/overlays/prod/kustomization.yaml
@@ -4,17 +4,15 @@ kind: Kustomization
 resources:
 - ../../base
 - namespace.yaml
-# cert-manager deployed separately: kubectl apply -k kubernetes/overlays/prod/cert-manager
+- cert-manager
 - assets-kv-config.yaml
 
 namespace: lornu-prod
 
-labels:
-- pairs:
-    lornu.ai/environment: production
-    lornu.ai/managed-by: terraform-cloud
-    lornu.ai/asset-id: lornu-ai-final-clear-bg
-  includeSelectors: true
+commonLabels:
+  lornu.ai/environment: production
+  lornu.ai/managed-by: terraform-cloud
+  lornu.ai/asset-id: lornu-ai-final-clear-bg
 
 patches:
 - target:
@@ -41,6 +39,6 @@ patches:
       path: /spec/tls
       value:
       - hosts:
-        - lornu.ai
-        - api.lornu.ai
+        - ${PROD_DOMAIN_NAME}
+        - ${PROD_API_DOMAIN_NAME}
         secretName: lornu-ai-tls
