fix: cherry-pick JSON parsing fixes from PR #342
- Use Playwright's actual status values (expected/unexpected)
- Fix permissions to allow GitHub Pages deployment (contents: write)
- Improve test result parsing with recursive jq query

Co-authored-by: PR #342

--- a/.github/workflows/synthetic-monitoring.yml
+++ b/.github/workflows/synthetic-monitoring.yml
@@ -17,7 +17,7 @@ on:
           - development
 
 permissions:
-  contents: read
+  contents: write
   issues: write
 
 env:
@@ -71,9 +71,9 @@ jobs:
         id: parse-results
         run: |
           if [ -f test-results.json ]; then
-            # Extract pass/fail counts
-            PASSED=$(jq '[.suites[].specs[].tests[] | select(.status == "passed")] | length' test-results.json || echo 0)
-            FAILED=$(jq '[.suites[].specs[].tests[] | select(.status == "failed")] | length' test-results.json || echo 0)
+                        # Extract pass/fail counts using Playwright's actual status values
+            PASSED=$(jq '[.suites[] | recurse(.suites[]?) | .specs[]? | .tests[]? | select(.status == "expected")] | length' test-results.json || echo 0)
+            FAILED=$(jq '[.suites[] | recurse(.suites[]?) | .specs[]? | .tests[]? | select(.status == "unexpected")] | length' test-results.json || echo 0)
             TOTAL=$((PASSED + FAILED))
 
             echo "passed=$PASSED" >> $GITHUB_OUTPUT
