refactor: rename GCP overlays and apply pre-commit fixes
- Renamed kubernetes/overlays/lornu-prod → gcp-prod
- Renamed kubernetes/overlays/lornu-staging → gcp-staging
- Applied trailing whitespace and end-of-file fixes from pre-commit hooks
- Updated workflow references

--- a/.github/workflows/deploy-gke.yml
+++ b/.github/workflows/deploy-gke.yml
@@ -20,7 +20,7 @@ on:
         options:
           - lornu-dev
           - lornu-staging
-          - lornu-prod
+          - gcp-prod
 
 permissions:
   contents: read
