fix: correctly remove cert-manager annotation from AWS ingress
- Using JSON patch in kustomization.yaml to remove annotation
- Confirmed correct kustomize build output with ALB configuration

--- a/kubernetes/overlays/aws-prod/kustomization.yaml
+++ b/kubernetes/overlays/aws-prod/kustomization.yaml
@@ -8,3 +8,9 @@ patches:
     target:
       kind: Ingress
       name: lornu-ai
+  - target:
+      kind: Ingress
+      name: lornu-ai
+    patch: |-
+      - op: remove
+        path: /metadata/annotations/cert-manager.io~1cluster-issuer
