feat: finalize multi-cloud workflows
- Updated multi-cloud-deploy.yml to orchestrate both AWS and GCP app/infra deployments
- Updated deploy-gke.yml to be reusable
- Removed obsolete k8s-prod.yml (superseded by deploy-gke + aws-prod)
- Ensured consistent environment naming

--- a/.github/workflows/multi-cloud-deploy.yml
+++ b/.github/workflows/multi-cloud-deploy.yml
@@ -40,8 +40,16 @@ jobs:
     uses: ./.github/workflows/terraform-aws-prod.yml
     secrets: inherit
 
-  deploy-gcp:
+  deploy-gcp-infra:
     needs: detect-changes
     if: needs.detect-changes.outputs.gcp-changed == 'true'
     uses: ./.github/workflows/terraform-gcp.yml
+    secrets: inherit
+
+  deploy-gcp-app:
+    needs: [detect-changes, deploy-gcp-infra]
+    if: needs.detect-changes.outputs.gcp-changed == 'true'
+    uses: ./.github/workflows/deploy-gke.yml
+    with:
+      environment: gcp-prod
     secrets: inherit
