--- a/.github/workflows/deploy-gke.yml
+++ b/.github/workflows/deploy-gke.yml
@@ -1,15 +1,7 @@
 name: GKE Build & Deploy
 
 on:
-  push:
-    branches:
-      - gcp-develop
-    paths:
-      - 'apps/web/**'
-      - 'packages/api/**'
-      - 'kubernetes/**'
-      - 'Dockerfile'
-      - '.github/workflows/deploy-gke.yml'
+  workflow_call:
   workflow_dispatch:
     inputs:
       environment:
