--- a/.github/workflows/deploy-gke.yml
+++ b/.github/workflows/deploy-gke.yml
@@ -2,6 +2,12 @@ name: GKE Build & Deploy
 
 on:
   workflow_call:
+    inputs:
+      environment:
+        description: 'Environment to deploy to'
+        required: true
+        default: 'lornu-dev'
+        type: string
   workflow_dispatch:
     inputs:
       environment:
