--- a/kubernetes/base/ingress.yaml
+++ b/kubernetes/base/ingress.yaml
@@ -2,25 +2,16 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: lornu-ai
-  # Annotations removed from base to support multi-cloud overlays
+  annotations:
+    cert-manager.io/cluster-issuer: "letsencrypt-prod"
+    kubernetes.io/ingress.class: "gce"
 spec:
   tls:
   - hosts:
     - lornu.ai
-    - www.lornu.ai
     secretName: lornu-ai-tls
   rules:
   - host: lornu.ai
-    http:
-      paths:
-      - path: /
-        pathType: Prefix
-        backend:
-          service:
-            name: lornu-ai
-            port:
-              number: 80
-  - host: www.lornu.ai
     http:
       paths:
       - path: /
